trunk/Archive2/e6/02c82762938cfb/output
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/memory:64:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_construct.h:61:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ext/alloc_traits.h:36:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/alloc_traits.h:36:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ptr_traits.h:124:24: error: implicit instantiation of undefined template 'std::__ptrtr_elt_type<int, false>'
      typedef typename __ptrtr_elt_type<_Ptr>::__type   __orig_type;
                       ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ptr_traits.h:137:29: note: in instantiation of template class 'std::__ptrtr_pointer_to<int>' requested here
    struct pointer_traits : __ptrtr_pointer_to<_Ptr>
                            ^
main.cpp:6:24: note: in instantiation of template class 'std::pointer_traits<int>' requested here
    struct {} _ = std::pointer_traits<int>::element_type();
                       ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ptr_traits.h:45:12: note: template is declared here
    struct __ptrtr_elt_type;
           ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ptr_traits.h:142:24: error: implicit instantiation of undefined template 'std::__ptrtr_elt_type<int, false>'
      typedef typename __ptrtr_elt_type<_Ptr>::__type   element_type;
                       ^
main.cpp:6:24: note: in instantiation of template class 'std::pointer_traits<int>' requested here
    struct {} _ = std::pointer_traits<int>::element_type();
                       ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ptr_traits.h:45:12: note: template is declared here
    struct __ptrtr_elt_type;
           ^
2 errors generated.
