trunk/Archive2/e6/02c82762938cfb/main.cpp
#include <memory>



int main () {
    struct {} _ = std::pointer_traits<int>::element_type();
}